<resources>
    <string name="app_name">My Tokdis Movie App</string>

    <string name="poster">Poster</string>
    <string name="title">Venom</string>
    <string name="text_release">Friday, 10 January 2020</string>
    <string name="star">Star</string>
    <string name="vote_average">90</string>
    <string name="strip">-</string>
    <string name="kurbuk">(</string>
    <string name="vote_count">24</string>
    <string name="kurtup">)</string>

    <string name="overview">Overview</string>
    <string name="text_overview">Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</string>
    <string name="release">Release</string>
    <string name="text_genre">Action, Adventure, Scrience</string>
    <string name="genre">Genre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="similar">Similar</string>
    <string name="crew">Crew</string>
    <string name="imagesplash">imageSplash</string>
    <string name="setting">Setting</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="imagefavorite">imageFavorite</string>

</resources>
