<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="179dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imagePoster"
                android:layout_width="119.5dp"
                android:layout_height="179dp"
                android:src="@drawable/venom"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/poster" />

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/title"
                android:textColor="@color/colorAccent"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imagePoster"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textRelease"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="16sp"
                android:textStyle="italic"
                android:text="@string/text_release"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="@+id/textTitle"
                app:layout_constraintStart_toStartOf="@+id/textTitle"
                app:layout_constraintTop_toBottomOf="@+id/textTitle" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/textRelease"
                app:layout_constraintStart_toStartOf="@+id/textRelease"
                app:layout_constraintTop_toBottomOf="@+id/textRelease">

                <ImageView
                    android:id="@+id/imageStar"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/star"
                    android:src="@drawable/star"
                    app:layout_constraintStart_toEndOf="@+id/imagePoster"
                    app:layout_constraintTop_toBottomOf="@+id/textRe" />

                <TextView
                    android:id="@+id/textVoteAverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:text="@string/vote_average"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageStar"
                    app:layout_constraintStart_toEndOf="@+id/imageStar"
                    app:layout_constraintTop_toTopOf="@+id/imageStar" />

                <TextView
                    android:id="@+id/textStrip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:text="@string/strip"
                    android:textColor="@color/colorAccentDisable"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageStar"
                    app:layout_constraintStart_toEndOf="@+id/textVoteAverage"
                    app:layout_constraintTop_toTopOf="@+id/imageStar" />

                <TextView
                    android:id="@+id/textKurbuk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:text="@string/kurbuk"
                    android:textColor="@color/colorAccentDisable"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageStar"
                    app:layout_constraintStart_toEndOf="@+id/textStrip"
                    app:layout_constraintTop_toTopOf="@+id/imageStar" />

                <TextView
                    android:id="@+id/textVoteCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:text="@string/vote_count"
                    android:textColor="@color/colorAccentDisable"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageStar"
                    app:layout_constraintStart_toEndOf="@+id/textKurbuk"
                    app:layout_constraintTop_toTopOf="@+id/imageStar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:text="@string/kurtup"
                    android:textColor="@color/colorAccentDisable"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageStar"
                    app:layout_constraintStart_toEndOf="@+id/textVoteCount"
                    app:layout_constraintTop_toTopOf="@+id/imageStar" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageFavorite"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="16dp"
            android:src="@drawable/delete"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/imagefavorite"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>